# CppUnitTestFramework

./: .gitignore  .travis.yml  CMakeLists.txt  CmakeLists.txt  CppUnitTestFramework.sln  CppUnitTestsFramework.sln  README.md  TestGcc.cpp  appveyor.yml  buildTemplate.sh  cmakegen.sh  default.workspace  default.workspace.layout  testScript.bat
CppUnitTestFramework.CompileTest/: CMakeLists.txt  CmakeLists.txt  ConfigureMethodTests.cpp  ConfigureMethodTests.h  CppUnitTestFramework.CompileTest.cbp  CppUnitTestFramework.CompileTest.cpp  CppUnitTestFramework.CompileTest.depend  CppUnitTestFramework.CompileTest.h  CppUnitTestFramework.CompileTest.vcxproj  CppUnitTestFramework.CompileTest.vcxproj.filters  DrawingFunc.cpp  MacrosClassess.cpp  MacrosClassess.h  ReadMe.txt  TestArgMethod.cpp  TestArgMethod.h  TestCasesTests.cpp  TestCasesTests.h  gmon.out  stdafx.cpp  stdafx.h
IoC/: IoC.sln  (+1 more)
Runners/TestRunnerLibrary/TestsRunner/: CMakeLists.txt  ConsoleMessageLogger.cpp  ConsoleMessageLogger.h  Exception.h  MessageLogger.h  TestDiscover.cpp  TestExecutor.cpp  TestExecutor.h  TestReportCategoryContainer.h  TestReportContainer.cpp  (+5 more)
Runners/TestsRunner/: CMakeLists.txt  ConsoleMessageLogger.cpp  ConsoleMessageLogger.h  Exception.h  ManagedLibraryChecker.cpp  ManagedLibraryChecker.h  MessageLogger.h  ReadMe.txt  SharedLibrary.cpp  SharedLibrary.h  TestDiscover.cpp  TestDiscover.h  TestExecutor.cpp  TestExecutor.h  TestReportCategoryContainer.h  TestReportContainer.h  TestReportInfoExtractor.cpp  TestsDiscover.cpp  TestsDiscover.h  TestsRunner.vcxproj  TestsRunner.vcxproj.filters
(+404 files in other folders)
