cmake_minimum_required (VERSION 2.6)
project (CppUnitTestFramework.CompileTest)
	add_executable(CppUnitTestFramework.CompileTest ConfigureMethodTests.cpp CppUnitTestFramework.CompileTest.cpp DrawingFunc.cpp MacrosClassess.cpp stdafx.cpp TestArgMethod.cpp TestCasesTests.cpp)
include_directories(" ${PROJECT_SOURCE_DIR}/..")
target_link_libraries (CppUnitTestFramework.CompileTest CppUnitTestFramework)
